--- a/translation/de/sabbamitta/sutta/an/an8/an8.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.81_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an8.81:1.8": "Wie ein Baum ohne Zweige und Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an8.81:1.9": "Ebenso hat, wenn es keine Achtsamkeit und keine Umsicht gibt, jemand ohne Achtsamkeit und Umsicht eine wesentliche Bedingung für Gewissen und Besonnenheit zerstört. ",
   "an8.81:1.10": "Wenn es kein Gewissen und keine Besonnenheit gibt … ",
-  "an8.81:1.11": "hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an8.81:1.11": "hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an8.81:2.1": "Wenn es Achtsamkeit und Umsicht gibt, hat jemand, der Achtsamkeit und Umsicht vervollkommnet hat, eine wesentliche Bedingung für Gewissen und Besonnenheit erfüllt. ",
   "an8.81:2.2": "Wenn es Gewissen und Besonnenheit gibt, hat jemand, der Gewissen und Besonnenheit vervollkommnet hat, eine wesentliche Bedingung für die Zügelung der Sinne erfüllt. ",
   "an8.81:2.3": "Wenn es eine Zügelung der Sinne gibt, hat jemand, der die Zügelung der Sinne vervollkommnet hat, eine wesentliche Bedingung für sittliches Verhalten erfüllt. ",
