--- a/translation/de/sabbamitta/sutta/an/an8/an8.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.81_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an8.81:2.4": "Wenn es sittliches Verhalten gibt, hat jemand, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an8.81:2.5": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
   "an8.81:2.6": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft erfüllt. ",
-  "an8.81:2.7": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt. ",
+  "an8.81:2.7": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt. ",
   "an8.81:2.8": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an8.81:2.9": "Ebenso hat, wenn es Achtsamkeit und Umsicht gibt, jemand, der Achtsamkeit und Umsicht vervollkommnet hat, eine wesentliche Bedingung für Gewissen und Besonnenheit erfüllt. ",
   "an8.81:2.10": "Wenn es Gewissen und Besonnenheit gibt … ",
