--- a/translation/de/sabbamitta/sutta/an/an10/an10.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.3_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "an10.3:1.10": "Wie ein Baum ohne Zweige und Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an10.3:1.11": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung dafür zerstört, nichts zu bereuen zu haben. ",
   "an10.3:1.12": "Wenn man etwas zu bereuen hat, hat jemand, der etwas zu bereuen hat, eine wesentliche Bedingung für Freude zerstört. … ",
-  "an10.3:1.13": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an10.3:1.13": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an10.3:2.1": "Ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, hat eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an10.3:2.2": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. ",
   "an10.3:2.3": "Wenn es Freude gibt, hat jemand, der die Freude vervollkommnet hat, eine wesentliche Bedingung für Ekstase erfüllt. ",
