--- a/translation/de/sabbamitta/sutta/an/an10/an10.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.5_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an10.5:2.6": "Wenn es Seligkeit gibt, hat jemand, der die Seligkeit vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an10.5:2.7": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
   "an10.5:2.8": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft erfüllt. ",
-  "an10.5:2.9": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt. ",
+  "an10.5:2.9": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt. ",
   "an10.5:2.10": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an10.5:2.11": "Ebenso hat ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an10.5:2.12": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
