--- a/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an10.4:1.1": "Da wandte sich der Ehrwürdige Sāriputta an die Mönche und Nonnen … ",
   "an10.4:1.2": "„Werte Freunde, ein unmoralischer Mensch, jemand ohne sittliches Verhalten, hat eine wesentliche Bedingung dafür zerstört, nichts zu bereuen zu haben. ",
   "an10.4:1.3": "Wenn man etwas zu bereuen hat, hat jemand, der etwas zu bereuen hat, eine wesentliche Bedingung für Freude zerstört. … ",
-  "an10.4:1.4": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an10.4:1.4": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an10.4:1.5": "Wie ein Baum ohne Zweige und Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an10.4:1.6": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung dafür zerstört, nichts zu bereuen zu haben. ",
   "an10.4:1.7": "Wenn man etwas zu bereuen hat, hat jemand, der etwas zu bereuen hat, eine wesentliche Bedingung für Freude zerstört. … ",
