--- a/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an10.4:1.8": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an10.4:2.1": "Ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, hat eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an10.4:2.2": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
-  "an10.4:2.3": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an10.4:2.3": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an10.4:2.4": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an10.4:2.5": "Ebenso hat ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an10.4:2.6": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
