--- a/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.4_translation-de-sabbamitta.json
@@ -16,5 +16,5 @@
   "an10.4:2.4": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an10.4:2.5": "Ebenso hat ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an10.4:2.6": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
-  "an10.4:2.7": "Jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, hat eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt.“ "
+  "an10.4:2.7": "Jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, hat eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt.“ "
 }
