--- a/translation/de/sabbamitta/sutta/an/an11/an11.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.3_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "an11.3:3.7": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
   "an11.3:3.8": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung erfüllt. ",
   "an11.3:3.9": "Wenn es Ernüchterung gibt, hat jemand, der Ernüchterung vervollkommnet hat, eine wesentliche Bedingung für das Schwinden der Leidenschaft erfüllt. ",
-  "an11.3:3.10": "Wenn es Schwinden der Leidenschaft gibt, hat jemand, der Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt. ",
+  "an11.3:3.10": "Wenn es Schwinden der Leidenschaft gibt, hat jemand, der Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt. ",
   "an11.3:4.1": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an11.3:4.2": "Ebenso hat ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an11.3:4.3": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
