--- a/translation/de/sabbamitta/sutta/an/an11/an11.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.4_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an11.4:3.1": "Wie ein Baum ohne Zweige und Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an11.4:3.2": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung dafür zerstört, nichts zu bereuen zu haben. ",
   "an11.4:3.3": "Wenn man etwas zu bereuen hat, hat jemand, der etwas zu bereuen hat, eine wesentliche Bedingung für Freude zerstört. … ",
-  "an11.4:3.4": "Wenn es kein Schwinden der Leidenschaft gibt, hat jemand ohne Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an11.4:3.4": "Wenn es kein Schwinden der Leidenschaft gibt, hat jemand ohne Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an11.4:4.1": "Ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, hat eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an11.4:4.2": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. ",
   "an11.4:4.3": "Wenn es Freude gibt, hat jemand, der die Freude vervollkommnet hat, eine wesentliche Bedingung für Ekstase erfüllt. ",
