--- a/translation/de/sabbamitta/sutta/an/an11/an11.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.4_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "an11.4:4.6": "Wenn es Seligkeit gibt, hat jemand, der die Seligkeit vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an11.4:4.8": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung erfüllt. ",
   "an11.4:4.9": "Wenn es Ernüchterung gibt, hat jemand, der Ernüchterung vervollkommnet hat, eine wesentliche Bedingung für das Schwinden der Leidenschaft erfüllt. ",
-  "an11.4:4.10": "Wenn es Schwinden der Leidenschaft gibt, hat jemand, der das Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt. ",
+  "an11.4:4.10": "Wenn es Schwinden der Leidenschaft gibt, hat jemand, der das Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt. ",
   "an11.4:5.1": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an11.4:5.2": "Ebenso hat ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung dafür erfüllt, nichts zu bereuen zu haben. ",
   "an11.4:5.3": "Wenn man nichts zu bereuen hat, hat jemand, der nichts zu bereuen hat, eine wesentliche Bedingung für Freude erfüllt. … ",
