--- a/translation/de/sabbamitta/sutta/an/an11/an11.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.5_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an11.5:1.8": "Wenn es keine rechte Versenkung gibt, hat jemand ohne rechte Versenkung eine wesentliche Bedingung für wirkliches Erkennen und Sehen zerstört. ",
   "an11.5:1.9": "Wenn es kein wirkliches Erkennen und Sehen gibt, hat jemand ohne wirkliches Erkennen und Sehen eine wesentliche Bedingung für Ernüchterung zerstört. ",
   "an11.5:1.10": "Wenn es keine Ernüchterung gibt, hat jemand ohne Ernüchterung eine wesentliche Bedingung für das Schwinden der Leidenschaft zerstört. ",
-  "an11.5:1.11": "Wenn es kein Schwinden der Leidenschaft gibt, hat jemand ohne Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an11.5:1.11": "Wenn es kein Schwinden der Leidenschaft gibt, hat jemand ohne Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an11.5:2.1": "Wie ein Baum ohne Zweige und Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an11.5:2.2": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung dafür zerstört, nichts zu bereuen zu haben. ",
   "an11.5:2.3": "Wenn man etwas zu bereuen hat, hat jemand, der etwas zu bereuen hat, eine wesentliche Bedingung für Freude zerstört. … ",
