--- a/translation/de/sabbamitta/sutta/an/an10/an10.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.1_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an10.1:9.1": "„Aber was ist der Zweck und die vorteilhafte Folge von wahrhaftigem Erkennen und Sehen?“ ",
   "an10.1:9.2": "„Der Zweck und die vorteilhafte Folge von wahrhaftigem Erkennen und Sehen sind Ernüchterung und Schwinden der Leidenschaft.“ ",
   "an10.1:10.1": "„Aber was ist der Zweck und die vorteilhafte Folge von Ernüchterung und Schwinden der Leidenschaft?“ ",
-  "an10.1:10.2": "„Der Zweck und die vorteilhafte Folge von Ernüchterung und Schwinden der Leidenschaft ist das Wissen und Sehen der Freiheit. ",
+  "an10.1:10.2": "„Der Zweck und die vorteilhafte Folge von Ernüchterung und Schwinden der Leidenschaft ist das Erkennen und Sehen der Freiheit. ",
   "an10.1:11.1": "Daher, Ānanda, ist der Zweck und die vorteilhafte Folge von tauglicher Sittlichkeit, dass man nichts zu bereuen hat. ",
   "an10.1:11.2": "Der Zweck und die vorteilhafte Folge davon, nichts zu bereuen zu haben, ist Freude. ",
   "an10.1:11.3": "Der Zweck und die vorteilhafte Folge der Freude ist Ekstase. ",
