--- a/translation/de/sabbamitta/sutta/an/an11/an11.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.1_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an11.1:9.1": "„Aber was ist der Zweck und die vorteilhafte Folge der Ernüchterung?“ ",
   "an11.1:9.2": "„Der Zweck und die vorteilhafte Folge der Ernüchterung ist das Schwinden der Leidenschaft.“ ",
   "an11.1:10.1": "„Aber was ist der Zweck und die vorteilhafte Folge des Schwindens der Leidenschaft?“ ",
-  "an11.1:10.2": "„Der Zweck und die vorteilhafte Folge des Schwindens der Leidenschaft ist das Wissen und Sehen der Freiheit. ",
+  "an11.1:10.2": "„Der Zweck und die vorteilhafte Folge des Schwindens der Leidenschaft ist das Erkennen und Sehen der Freiheit. ",
   "an11.1:11.1": "Daher, Ānanda, ist der Zweck und die vorteilhafte Folge von tauglicher Sittlichkeit, dass man nichts zu bereuen hat. ",
   "an11.1:11.2": "Der Zweck und die vorteilhafte Folge davon, nichts zu bereuen zu haben, ist Freude. ",
   "an11.1:11.3": "Der Zweck und die vorteilhafte Folge der Freude ist Ekstase. ",
