--- a/translation/de/sabbamitta/sutta/an/an11/an11.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.1_translation-de-sabbamitta.json
@@ -34,6 +34,6 @@
   "an11.1:11.7": "Der Zweck und die vorteilhafte Folge der Versenkung ist wahrhaftiges Erkennen und Sehen. ",
   "an11.1:11.8": "Der Zweck und die vorteilhafte Folge von wahrhaftigem Erkennen und Sehen ist Ernüchterung. ",
   "an11.1:11.9": "Der Zweck und die vorteilhafte Folge der Ernüchterung ist das Schwinden der Leidenschaft. ",
-  "an11.1:11.10": "Der Zweck und die vorteilhafte Folge des Schwindens der Leidenschaft ist das Wissen und Sehen der Freiheit. ",
+  "an11.1:11.10": "Der Zweck und die vorteilhafte Folge des Schwindens der Leidenschaft ist das Erkennen und Sehen der Freiheit. ",
   "an11.1:11.11": "So, Ānanda, führt taugliche Sittlichkeit schrittweise zum Höchsten.“ "
 }
