--- a/translation/de/sabbamitta/sutta/an/an3/an3.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.74_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an3.74:1.1": "Einmal hielt sich der Ehrwürdige Ānanda bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
   "an3.74:1.2": "Da gingen die Licchaver Abhaya und Paṇḍitakumāra zum Ehrwürdigen Ānanda, verbeugten sich, setzten sich zur Seite hin und sagten zu ihm: ",
   "an3.74:1.3": "„Herr, Nāṭaputta, der Anführer der Jainas, behauptet, allwissend und all-sehend zu sein und alles ohne Ausnahme zu erkennen und zu sehen, und zwar so: ",
-  "an3.74:1.4": "‚Wissen und Sehen sind mir ständig und fortwährend gegenwärtig, ob ich gehe, stehe, schlafe oder wache.‘ ",
+  "an3.74:1.4": "‚Erkennen und Sehen sind mir ständig und fortwährend gegenwärtig, ob ich gehe, stehe, schlafe oder wache.‘ ",
   "an3.74:1.5": "Er plädiert dafür, altes Karma mittels Bußübungen zu vernichten und dadurch, dass man kein neues Karma schafft, die Brücke abzubrechen. ",
   "an3.74:1.6": "So wird mit dem Tilgen des Karma das Leiden getilgt; mit dem Tilgen des Leidens wird Gefühl getilgt; und mit dem Tilgen des Gefühls wird alles Leiden abgetragen sein. ",
   "an3.74:1.7": "So geht man in diesem Leben durch die Läuterung mittels Abtragen über das Leiden hinaus. ",
