--- a/translation/de/sabbamitta/sutta/an/an1/an1.41-50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.41-50_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "an1.45:1.1": "„Wie ein See in einer Bergschlucht, Mönche und Nonnen, der trüb, undurchsichtig und schmutzig wäre. Ein Mensch mit gutem Sehvermögen, der am Ufer stünde, würde die Schnecken und Muscheln, Steine und Kiesel nicht sehen, noch die Fischschwärme, die herumschwämmen oder stillstünden. ",
   "an1.45:1.2": "Und warum? ",
   "an1.45:1.3": "Weil das Wasser getrübt ist. ",
-  "an1.45:1.4": "Ebenso ist es nicht möglich, dass ein Mönch oder eine Nonne, deren Geist getrübt ist, wissen kann, was gut für sie selbst, gut für jemand anderen oder gut für beide ist; oder dass sie einen erhabenen Zustand übermenschlichen Wissens und Sehens erreichen können, der der Edlen würdig ist. ",
+  "an1.45:1.4": "Ebenso ist es nicht möglich, dass ein Mönch oder eine Nonne, deren Geist getrübt ist, wissen kann, was gut für sie selbst, gut für jemand anderen oder gut für beide ist; oder dass sie einen erhabenen Zustand übermenschlichen Erkennens und Sehens erreichen können, der der Edlen würdig ist. ",
   "an1.45:1.5": "Und warum? ",
   "an1.45:1.6": "Weil ihr Geist getrübt ist.“ ",
   "an1.45:1.7": " ",
