--- a/translation/de/sabbamitta/sutta/an/an1/an1.41-50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.41-50_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "an1.46:1.1": "„Wie ein See in einer Bergschlucht, Mönche und Nonnen,der durchsichtig, klar und ungetrübt wäre. Ein Mensch mit gutem Sehvermögen, der am Ufer stünde, würde die Schnecken und Muscheln, Steine und Kiesel sehen und auch die Fischschwärme, die herumschwämmen oder stillstünden. ",
   "an1.46:1.2": "Und warum? ",
   "an1.46:1.3": "Weil das Wasser ungetrübt ist. ",
-  "an1.46:1.4": "Ebenso ist es möglich, dass ein Mönch oder eine Nonne, deren Geist ungetrübt ist, wissen kann, was gut für sie selbst, gut für jemand anderen oder gut für beide ist; oder dass sie einen erhabenen Zustand übermenschlichen Wissens und Sehens erreichen können, der der Edlen würdig ist. ",
+  "an1.46:1.4": "Ebenso ist es möglich, dass ein Mönch oder eine Nonne, deren Geist ungetrübt ist, wissen kann, was gut für sie selbst, gut für jemand anderen oder gut für beide ist; oder dass sie einen erhabenen Zustand übermenschlichen Erkennens und Sehens erreichen können, der der Edlen würdig ist. ",
   "an1.46:1.5": "Und warum? ",
   "an1.46:1.6": "Weil ihr Geist ungetrübt ist.“ ",
   "an1.46:1.7": " ",
