--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "dn33:1.7.7": "Und was ist diese Lehre? ",
   "dn33:1.7.8": " ",
   "dn33:1.7.9.0": "1. Einer ",
-  "dn33:1.7.10": "Da sind einzeln angeordnete Lehren, die vom Gesegneten richtig erklärt wurden, ihm, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha. ",
+  "dn33:1.7.10": "Da sind einzeln angeordnete Lehren, die vom Gesegneten richtig erklärt wurden, ihm, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha. ",
   "dn33:1.7.11": "Ihr solltet sie alle im Chor aufsagen, ohne zu streiten, sodass dieser spirituelle Pfad lange Zeit bestehen bleibt – zum Nutzen und Glück vieler Menschen, aus Anteilnahme für die Welt, zum Vorteil, Nutzen und Glück von Göttern und Menschen. ",
   "dn33:1.8.1": "Welches sind die einzeln angeordneten Lehren? ",
   "dn33:1.8.2": "‚Alle Lebewesen werden von Nahrung erhalten.‘ ",
