--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -955,7 +955,7 @@
   "dn33:3.1.163": "Das ist die siebte Dimension der Meisterschaft. ",
   "dn33:3.1.164": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "dn33:3.1.165": "Wie der Morgenstern, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
-  "dn33:3.1.166": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "dn33:3.1.166": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn33:3.1.167": "Das ist die achte Dimension der Meisterschaft. ",
   "dn33:3.1.168": "Acht Befreiungen: ",
   "dn33:3.1.169": "Man besitzt körperliche Form und sieht Bilder. ",
