--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "an10.29:6.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:6.5": "Das ist die erste Dimension der Meisterschaft. ",
   "an10.29:7.1": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
-  "an10.29:7.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:7.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:7.3": "Das ist die zweite Dimension der Meisterschaft. ",
   "an10.29:8.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
   "an10.29:8.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
