--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an10.29:8.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:8.3": "Das ist die dritte Dimension der Meisterschaft. ",
   "an10.29:9.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
-  "an10.29:9.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:9.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:9.3": "Das ist die vierte Dimension der Meisterschaft. ",
   "an10.29:10.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an10.29:10.2": "Wie eine Flachsblüte, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
