--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -54,7 +54,7 @@
   "an10.29:10.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an10.29:10.2": "Wie eine Flachsblüte, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
   "an10.29:10.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, blau, von blauer Farbe, in blauer Schattierung, blauem Ton. ",
-  "an10.29:10.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:10.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:10.5": "Das ist die fünfte Dimension der Meisterschaft. ",
   "an10.29:11.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "an10.29:11.2": "Wie eine Kaṇikārablüte, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
