--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "an10.29:12.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
   "an10.29:12.2": "Wie eine scharlachrote Malvenblüte, rot, von roter Farbe, in roter Schattierung, rotem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
   "an10.29:12.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
-  "an10.29:12.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:12.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:12.5": "Das ist die siebte Dimension der Meisterschaft. ",
   "an10.29:13.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an10.29:13.2": "Wie der Morgenstern, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
