--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -73,7 +73,7 @@
   "an10.29:13.5": "Das ist die achte Dimension der Meisterschaft. ",
   "an10.29:13.6": "Das sind die acht Dimensionen der Meisterschaft. ",
   "an10.29:14.1": "Die vorderste dieser acht Dimensionen der Meisterschaft ist, wenn jemand, während er keine Form innerlich wahrnimmt, äußere Bilder sieht, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
-  "an10.29:14.2": "Wenn er das gemeistert hat, ist er sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:14.2": "Wenn er das gemeistert hat, ist er sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:14.3": "Manche Lebewesen haben diese Wahrnehmung. ",
   "an10.29:14.4": "Aber selbst die Lebewesen, die diese Wahrnehmung haben, verfallen und gehen zugrunde. ",
   "an10.29:14.5": "Wenn er das sieht, wird ein gebildeter edler Schüler davon ernüchtert. ",
