--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -533,7 +533,7 @@
   "dn34:2.1.176": "Das ist die fünfte Dimension der Meisterschaft. ",
   "dn34:2.1.177": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
   "dn34:2.1.178": "Wie eine Kaṇikārablüte, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, gelb, von gelber Farbe, in gelber Schattierung, gelbem Ton. ",
-  "dn34:2.1.179": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "dn34:2.1.179": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn34:2.1.180": "Das ist die sechste Dimension der Meisterschaft. ",
   "dn34:2.1.181": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
   "dn34:2.1.182": "Wie eine scharlachrote Malvenblüte, rot, von roter Farbe, in roter Schattierung, rotem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, rot, von roter Farbe, in roter Schattierung, rotem Ton. ",
